SortAndStar task from codewars completed